[project]
name = "TContainers-practice"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Jacob", email = "jacob8753@gmail.com"},
]
dependencies = ["fastapi>=0.128.7", "uvicorn[standard]>=0.40.0", "psycopg[binary]>=3.3.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "testcontainers[postgres]>=4.14.1",
]
